Trying some jvm->python calls